# pfmsoft-snippets

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: python-package.yml
changelog.d/: 20241024_102110_pfmsoft_dev.md  20241024_115053_pfmsoft_dev.md  20241024_155806_pfmsoft_dev.md
changelog.d/templates/: entry_title_template.md.j2  new_fragment.md.j2
dev-docs/: project-setup.md  release-workflow.md  sphinx_docs.md
docs/source/: conf.py  index.md  pfmsoft_snippets_cli.rst
src/pfmsoft/: __init__.py  pfmsoft_snippets_cli.py
src/pfmsoft/snippets/: __init__.py
src/pfmsoft/snippets/logging/: logging.py  tz_aware_formatter.py
src/pfmsoft_snippets/: __init__.py
tests/pfmsoft_snippets/: __init__.py  test_console.py
